# portfolio

./: Cargo.toml  README.md  Trunk.toml  index.css  index.html  index.js  index_old.css  index_old.html
docs/: index-78ecab33f85fda27.css  index.html  portfolio-18b75359158768ed_bg.wasm  portfolio-645357170d1a4d1f_bg.wasm  portfolio-76c218e196ea6256.js  portfolio-76c218e196ea6256_bg.wasm  portfolio-97d59c94692a350d.js  portfolio-97d59c94692a350d_bg.wasm  portfolio-acc3acdd803967d4_bg.wasm  portfolio-c2893d967e9016bb.js  portfolio-c2893d967e9016bb_bg.wasm  portfolio-fa6c520aa866997.js  portfolio-fa6c520aa866997_bg.wasm
src/: education.rs  experience.rs  main.rs  projects.rs  skills.rs
