[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = { version = "0.3.2" }
web-sys = { version = "0.3.72", features = ["Window", "Document", "HtmlCollection", "Element", "HtmlVideoElement"]}